updated docker file

--- a/django_web/app/templates/game/home.html
+++ b/django_web/app/templates/game/home.html
@@ -43,7 +43,7 @@
 
           {% if user.is_authenticated %}
     <div style="margin: 20px 0;">
-        <a href="{% url 'create_story' %}" class="btn btn-create">🏎️ REGISTER NEW RACE</a>
+        <a href="{% url 'create_story' %}" class="btn btn-create"> REGISTER NEW RACE</a>
     </div>
 {% endif %}
 
